--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-bootstrap": "^1.3.0",
     "react-codejar": "^1.0.1",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.11.2",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "react-simple-code-editor": "^0.11.0",
